--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "tiktok",
     "version": "0.1.0",
     "private": true,
+    "homepage": "https://minhphung97.github.io/tiktok/",
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^1.3.0",
         "@fortawesome/free-brands-svg-icons": "^6.0.0",
@@ -9,7 +10,7 @@
         "@fortawesome/free-solid-svg-icons": "^6.0.0",
         "@fortawesome/react-fontawesome": "^0.1.17",
         "@testing-library/jest-dom": "^5.16.4",
-        "@testing-library/react": "^13.2.0",
+        "@testing-library/react": "^13.1.1",
         "@testing-library/user-event": "^13.5.0",
         "@tippyjs/react": "^4.2.6",
         "axios": "^0.27.2",
@@ -21,11 +22,20 @@
         "react-scripts": "5.0.1",
         "web-vitals": "^2.1.4"
     },
+    "devDependencies": {
+        "babel-plugin-module-resolver": "^4.1.0",
+        "customize-cra": "^1.0.0",
+        "react-app-rewired": "^2.2.1",
+        "sass": "^1.51.0",
+        "gh-pages": "^4.0.0"
+    },
     "scripts": {
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build",
         "start": "react-app-rewired start",
         "build": "react-app-rewired build",
         "test": "react-app-rewired test",
-        "eject": "react-scripts eject"
+        "eject": "react-app-rewired eject"
     },
     "eslintConfig": {
         "extends": [
@@ -44,11 +54,5 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
-    },
-    "devDependencies": {
-        "babel-plugin-module-resolver": "^4.1.0",
-        "customize-cra": "^1.0.0",
-        "react-app-rewired": "^2.2.1",
-        "sass": "^1.51.0"
     }
 }
